--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -4,7 +4,7 @@ $lightGreen: #b9e7e7;
   display: flex;
   justify-content: center;
   .container {
-    width: 1024px;
+    width: 100vw;
 
     .link {
       text-decoration: none;
